
add_executable(circle circle.c)
add_executable(sphere sphere.c)
target_link_libraries(sphere m)
add_executable(mol mol.c)
add_executable(maxmin maxmin.c)
add_executable(admin admin.c)
add_executable(homework homework.c)
add_executable(admin-scanf admin-scanf.c)
add_executable(scanf scanf.c)
add_executable(scanf-examples scanf-examples.c)