add_executable(min-of-two min-of-two.c)
add_executable(min-of-three min-of-three.c)
add_executable(min_of_two min_of_two.c)

add_executable(leap-if-else leap-if-else.c)
add_executable(leap-if-else-not leap-if-else-not.c)
add_executable(leap-simplified leap-simplified.c)
add_executable(leap leap.c)

add_executable(sum sum.c)
add_executable(min min.c)
